--- a/package.json
+++ b/package.json
@@ -16,9 +16,22 @@
     "url": "https://github.com/MaxTrainingRep/AddingTabs/issues"
   },
   "homepage": "https://github.com/MaxTrainingRep/AddingTabs#readme",
+  "browserslist": [
+    ">1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
+    "babel-loader": "^8.2.5",
+    "core-js": "^3.25.3",
     "json-server": "^0.17.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "es6-promise": "^4.2.8",
+    "nodelist-foreach-polyfill": "^1.2.0"
   }
 }
